# bevy_template

./: Cargo.toml  README.md  deny.toml
.github/workflows/: github_releases.yaml  linux.yaml  macos.yaml  release.yaml  release_wgpu.yaml  web.yaml  windows.yaml
attribution/: dependencies.toml  inspiration.toml  self.toml  template.toml  templates.toml
src/: main.rs
