[package]
name = "bevy_template"
version = "0.1.0"
description = "A bevy template"
license = "MIT OR Apache-2.0"
authors = ["AmeKnite"]
repository = "https://github.com/ameknite/bevy_template"
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
keywords = ["bevy", "template", "game"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.11.3", default-features = false }

[features]
default = ["webgpu", "bevy/webgl2"]

webgpu = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_audio",
    "bevy/bevy_gilrs",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/multi-threaded",
    "bevy/png",
    "bevy/hdr",
    "bevy/ktx2",
    "bevy/zstd",
    "bevy/vorbis",
    "bevy/x11",
    "bevy/bevy_gizmos",
    "bevy/android_shared_stdcxx",
    "bevy/tonemapping_luts",
    "bevy/default_font",
]

dev = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3     # All optimizations - faster runtime code
lto = "fat"       # Perform link-time optimizations
codegen-units = 1 # Allow for maximum size reduction optimizations

[profile.thin]
inherits = "release"
lto = "thin"         # Breaks with "fat" in MacOS Apple-Silicon
